deployed on heroku

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.2.0"
+  },
   "name": "minayaceramiccreations",
   "description": "VERB \t\t | \t\t  PATH \t\t |  \t DESCRIPTION ------------ | ------------- | ------------------- GET | /ceramics | index of ceramic pieces | GET | /ceramics/:id | show page for selected piece | GET | /ceramics/new | page to add newly available ceramic piece | POST | /ceramics | add new ceramic piece to site | GET | /ceramics/:id/edit | page to edit a photo | PUT | /ceramics/:id | edit/update a piece from the collection | DELETE | /ceramics/:id | delete ceramic piece that is no longer available |",
   "version": "1.0.0",
